# ldd_printers

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ldd_printers_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: ldd_printers.podspec
lib/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  ldd_printers.dart  ldd_printers_bindings_generated.dart
lib/api/: printers.dart  serialport.dart  serialport.freezed.dart
linux/: CMakeLists.txt
macos/: ldd_printers.podspec
macos/Classes/: ldd_printers.c
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  printers.rs  serialport.rs
src/: CMakeLists.txt  ldd_printers.c
windows/: CMakeLists.txt
